--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,17 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+input {
+
 }
