--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,8 @@ p {
   width: 5em;
 }
 
-#turns-left {
+#turns-left,
+#guessed {
   text-align: center;
   height: 2em;
   margin: 1em;
@@ -90,6 +91,7 @@ div#wordOutput {
 }
 
 div#wordOutput li {
+  font-size: 1.5em;
   background-color: lavender;
   border-top: 1px solid black;
   border-left: 1px solid black;
@@ -100,4 +102,14 @@ div#wordOutput li {
   margin: .25em;
   list-style: none;
   text-align: center;
+}
+
+/* Set initial char display to none */
+/* Will reveal with JS */
+.hidden p {
+  display: none;
+}
+
+.show {
+  display: inherit;
 }
