--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ p {
 }
 
 .container {
-  background-color: lightgreen;
+  /*background-color: lightgreen;*/
   width: 60%;
   margin: 2em;
   display: flex;
@@ -33,7 +33,7 @@ p {
 
 
 .interaction-form {
-  background-color: pink;
+  /*background-color: pink;*/
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -46,7 +46,7 @@ p {
   height: 2em;
   margin: 1em;
   align-self: center;
-  width: 5em;
+  width: 3em;
 }
 
 #turns-left,
@@ -59,10 +59,12 @@ p {
 }
 
 .btn-restart {
+  font-weight: bolder;
+  font-size: 1.5em;
   border: 1px solid black;
   border-radius: 15px;
   width: 10em;
-  height: 2em;
+  height: 2.5em;
   margin: .5em;
 
   align-self: center;
@@ -77,7 +79,7 @@ p {
 }
 
 .display-results {
-  background-color: tan;
+  /*background-color: tan;*/
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -85,6 +87,7 @@ p {
 }
 
 div#wordOutput {
+  font-size: 1.5em;
   text-align: center;
   align-self: center;
   display: flex;
@@ -98,7 +101,7 @@ div#wordOutput li {
   border-right: 1px solid black;
   border-bottom: 4px double black;
   width: 2em;
-  height: 3em;
+  height: 1.5em;
   margin: .25em;
   list-style: none;
   text-align: center;
